Adicionando detalhes a mais

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         </div>
         <input type="button" value="Calcular" class="btn">
       </form>
-      <span class="resultado"></span>
+      <div class="output">
+        <span class="resultado"></span>
+        <img src="" alt="Imagem Imc" class="imagem">
+      </div>
     </div>
   </main>
 </body>
