--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js" defer></script>
+  <script src="./scripts/script.js" type="module" defer></script>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,25 +19,28 @@
   </div>
 
   <main>
-    <div class="form-wrapper">
-      <h1 class="main-title">Cálculo IMC</h1>
-      <form class="formulario">
-        <div class="conjunto-inputs">
-          <div class="parte-form">
-            <input name="peso" type="number" id="peso" class="campo">
-            <label for="peso" class="legenda">Insira o seu Peso</label>
+    <div class="calculadora">
+      <div class="form-wrapper">
+        <h1 class="main-title">Cálculo IMC</h1>
+        <form class="formulario">
+          <div class="conjunto-inputs">
+            <div class="parte-form">
+              <input name="peso" type="number" id="peso" class="campo">
+              <label for="peso" class="legenda">Insira o seu Peso</label>
+            </div>
+            <div class="parte-form">
+              <input name="altura" type="number" id="altura" class="campo">
+              <label for="altura" class="legenda">Insira a sua Altura</label>
+            </div>
           </div>
-          <div class="parte-form">
-            <input name="altura" type="number" id="altura" class="campo">
-            <label for="altura" class="legenda">Insira a sua Altura</label>
-          </div>
+          <input type="button" value="Calcular" class="btn">
+        </form>
+        <div class="output">
+          <span class="resultado"></span>
+          <img src="" alt="Imagem Imc" class="imagem">
         </div>
-        <input type="button" value="Calcular" class="btn">
-      </form>
-      <div class="output">
-        <span class="resultado"></span>
-        <img src="" alt="Imagem Imc" class="imagem">
       </div>
+      <div class="historico"></div>
     </div>
   </main>
 </body>
